fixed hours of operation alignment

--- a/css/style.css
+++ b/css/style.css
@@ -598,6 +598,10 @@ border-radius: 10px;
 .footer-area{
 	padding-top: 20px;
 	padding-bottom: 0px;
+    text-align: center;
+}
+.hoursOfOperation{
+    text-align: center;
 }
 .bg-f{
 	background-image: url("../images/footer-bg.jpg");
